# weathervault

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini
.github/workflows/: tests-network.yml  tests.yml
scripts/: download_sample_data.py  test_bundled_data.py
tests/: __init__.py  test_constants.py  test_parsing.py  test_registry.py  test_stations.py  test_weather.py
weathervault/: __init__.py  _constants.py  _parsing.py  _registry.py  stations.py  weather.py
weathervault/data/: __init__.py
