[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools.packages.find]
include = ["weathervault"]

[project]
name = "weathervault"
description = "Obtain Polars DataFrames of historical weather data from the NCEI weather database"
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ["version"]
authors = [
    {name = "Rich Iannone", email = "riannone@me.com"}
]
maintainers = [
    {name = "Rich Iannone", email = "riannone@me.com"}
]
keywords = [
    "weather",
    "meteorology",
    "climate",
    "ncei",
    "noaa",
    "isd",
    "polars",
    "data",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
requires-python = ">=3.10"
dependencies = [
    "polars>=1.0.0",
    "httpx>=0.27.0",
    "timezonefinder>=6.5.0",
    "importlib-metadata",
    "tzdata>=2023.3; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/rich-iannone/weathervault"
Repository = "https://github.com/rich-iannone/weathervault"
"Bug Tracker" = "https://github.com/rich-iannone/gweathervault/issues"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["weathervault"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["weathervault"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
